# AOC2023

./: .ghci  AOC2023.cabal  shell.nix
src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs
