cabal-version:      2.2
name:               AOC2023
version:            0.1.0.0

author:             Léana 江
maintainer:         leana.jiang@icloud.com

executable Day1
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Day1.hs
  build-depends:
    , base          >= 4.7 && <5
  ghc-options:      -Wall
                    -Wcompat
                    -Widentities
                    -Wincomplete-record-updates
                    -Wincomplete-patterns
                    -Wincomplete-uni-patterns
                    -Wredundant-constraints

